[gd_scene load_steps=6 format=2]

[ext_resource path="res://Nodes/SliderControl.tscn" type="PackedScene" id=1]
[ext_resource path="res://Nodes/GUI.gd" type="Script" id=2]
[ext_resource path="res://misc/lato_medium_font.tres" type="DynamicFont" id=3]
[ext_resource path="res://misc/lato_title_font.tres" type="DynamicFont" id=4]
[ext_resource path="res://misc/lato_light_font.tres" type="DynamicFont" id=5]

[node name="GUI" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -54.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FPS" type="Label" parent="HBoxContainer"]
margin_top = 24.0
margin_right = 60.0
margin_bottom = 38.0
rect_min_size = Vector2( 60, 0 )
text = "FPS:"

[node name="Cohesion" parent="HBoxContainer" instance=ExtResource( 1 )]
margin_left = 64.0
margin_right = 266.0
margin_bottom = 62.0
rect_scale = Vector2( 1, 1 )
initial_value = 10.0

[node name="VBoxContainer" parent="HBoxContainer/Cohesion" index="0"]
margin_right = 192.0

[node name="HBoxContainer" parent="HBoxContainer/Cohesion/VBoxContainer" index="0"]
margin_right = 182.0

[node name="HSlider" parent="HBoxContainer/Cohesion/VBoxContainer/HBoxContainer" index="0"]
margin_right = 104.0

[node name="SpinBox" parent="HBoxContainer/Cohesion/VBoxContainer/HBoxContainer" index="1"]
margin_left = 108.0
margin_right = 182.0

[node name="Label" parent="HBoxContainer/Cohesion/VBoxContainer" index="1"]
margin_left = 61.0
margin_right = 120.0
hint_tooltip = "Move towards local center of mass."
text = "Cohesion"

[node name="Alignment" parent="HBoxContainer" instance=ExtResource( 1 )]
margin_left = 270.0
margin_right = 473.0
margin_bottom = 62.0
rect_scale = Vector2( 1, 1 )
parameter = "alignment"
initial_value = 10.0

[node name="VBoxContainer" parent="HBoxContainer/Alignment" index="0"]
margin_right = 193.0

[node name="HBoxContainer" parent="HBoxContainer/Alignment/VBoxContainer" index="0"]
margin_right = 183.0

[node name="HSlider" parent="HBoxContainer/Alignment/VBoxContainer/HBoxContainer" index="0"]
margin_right = 105.0

[node name="SpinBox" parent="HBoxContainer/Alignment/VBoxContainer/HBoxContainer" index="1"]
margin_left = 109.0
margin_right = 183.0

[node name="Label" parent="HBoxContainer/Alignment/VBoxContainer" index="1"]
margin_left = 58.0
margin_right = 124.0
hint_tooltip = "Move in the direction of local movement."
text = "Alignment"

[node name="Separation" parent="HBoxContainer" instance=ExtResource( 1 )]
margin_left = 477.0
margin_right = 680.0
margin_bottom = 62.0
rect_scale = Vector2( 1, 1 )
parameter = "separation"
initial_value = 10.0

[node name="VBoxContainer" parent="HBoxContainer/Separation" index="0"]
margin_right = 193.0

[node name="HBoxContainer" parent="HBoxContainer/Separation/VBoxContainer" index="0"]
margin_right = 183.0

[node name="HSlider" parent="HBoxContainer/Separation/VBoxContainer/HBoxContainer" index="0"]
margin_right = 105.0

[node name="SpinBox" parent="HBoxContainer/Separation/VBoxContainer/HBoxContainer" index="1"]
margin_left = 109.0
margin_right = 183.0

[node name="Label" parent="HBoxContainer/Separation/VBoxContainer" index="1"]
margin_left = 58.0
margin_right = 125.0
hint_tooltip = "Avoid nearby boids."
text = "Separation"

[node name="Target" parent="HBoxContainer" instance=ExtResource( 1 )]
margin_left = 684.0
margin_right = 886.0
margin_bottom = 62.0
rect_scale = Vector2( 1, 1 )
parameter = "target_force"
initial_value = 10.0
value_scalar = 0.1

[node name="VBoxContainer" parent="HBoxContainer/Target" index="0"]
margin_right = 192.0

[node name="HBoxContainer" parent="HBoxContainer/Target/VBoxContainer" index="0"]
margin_right = 182.0

[node name="HSlider" parent="HBoxContainer/Target/VBoxContainer/HBoxContainer" index="0"]
margin_right = 104.0

[node name="SpinBox" parent="HBoxContainer/Target/VBoxContainer/HBoxContainer" index="1"]
margin_left = 108.0
margin_right = 182.0

[node name="Label" parent="HBoxContainer/Target/VBoxContainer" index="1"]
margin_left = 50.0
margin_right = 131.0
hint_tooltip = "Strength of target following."
text = "Target follow"

[node name="SightRange" parent="HBoxContainer" instance=ExtResource( 1 )]
margin_left = 890.0
margin_right = 1093.0
margin_bottom = 62.0
rect_scale = Vector2( 1, 1 )
parameter = "view_distance"
initial_value = 40.0
value_scalar = 1.0

[node name="VBoxContainer" parent="HBoxContainer/SightRange" index="0"]
margin_right = 193.0

[node name="HBoxContainer" parent="HBoxContainer/SightRange/VBoxContainer" index="0"]
margin_right = 183.0

[node name="HSlider" parent="HBoxContainer/SightRange/VBoxContainer/HBoxContainer" index="0"]
margin_right = 105.0
min_value = 10.0
max_value = 200.0
value = 10.0

[node name="SpinBox" parent="HBoxContainer/SightRange/VBoxContainer/HBoxContainer" index="1"]
margin_left = 109.0
margin_right = 183.0
min_value = 10.0
max_value = 200.0

[node name="Label" parent="HBoxContainer/SightRange/VBoxContainer" index="1"]
margin_left = 56.0
margin_right = 126.0
hint_tooltip = "Distance to boids considered local (in pixels)"
text = "Sight range"

[node name="AvoidRange" parent="HBoxContainer" instance=ExtResource( 1 )]
margin_left = 1097.0
margin_right = 1300.0
margin_bottom = 62.0
rect_scale = Vector2( 1, 1 )
parameter = "avoid_distance"
initial_value = 15.0
value_scalar = 1.0

[node name="VBoxContainer" parent="HBoxContainer/AvoidRange" index="0"]
margin_right = 193.0

[node name="HBoxContainer" parent="HBoxContainer/AvoidRange/VBoxContainer" index="0"]
margin_right = 183.0

[node name="HSlider" parent="HBoxContainer/AvoidRange/VBoxContainer/HBoxContainer" index="0"]
margin_right = 105.0
min_value = 10.0
max_value = 200.0
value = 10.0

[node name="SpinBox" parent="HBoxContainer/AvoidRange/VBoxContainer/HBoxContainer" index="1"]
margin_left = 109.0
margin_right = 183.0
min_value = 10.0
max_value = 200.0
value = 10.0

[node name="Label" parent="HBoxContainer/AvoidRange/VBoxContainer" index="1"]
margin_left = 54.0
margin_right = 129.0
hint_tooltip = "Distance to start avoiding local boids"
text = "Avoid range"

[node name="Speed" parent="HBoxContainer" instance=ExtResource( 1 )]
margin_left = 1304.0
margin_right = 1506.0
margin_bottom = 62.0
rect_scale = Vector2( 1, 1 )
parameter = "speed"
initial_value = 250.0
value_scalar = 1.0

[node name="VBoxContainer" parent="HBoxContainer/Speed" index="0"]
margin_right = 192.0

[node name="HBoxContainer" parent="HBoxContainer/Speed/VBoxContainer" index="0"]
margin_right = 182.0

[node name="HSlider" parent="HBoxContainer/Speed/VBoxContainer/HBoxContainer" index="0"]
margin_right = 104.0
min_value = 1.0
max_value = 1000.0
step = 5.0
value = 200.0

[node name="SpinBox" parent="HBoxContainer/Speed/VBoxContainer/HBoxContainer" index="1"]
margin_left = 108.0
margin_right = 182.0
min_value = 1.0
max_value = 1000.0
step = 5.0
value = 200.0

[node name="Label" parent="HBoxContainer/Speed/VBoxContainer" index="1"]
margin_left = 71.0
margin_right = 110.0
hint_tooltip = "Maxmium speed of boids (pixels / second)"
text = "Speed"

[node name="Scale" parent="HBoxContainer" instance=ExtResource( 1 )]
margin_left = 1510.0
margin_right = 1713.0
margin_bottom = 62.0
rect_scale = Vector2( 1, 1 )
parameter = "base_scale"
initial_value = 0.6
value_scalar = 1.0

[node name="VBoxContainer" parent="HBoxContainer/Scale" index="0"]
margin_right = 193.0

[node name="HBoxContainer" parent="HBoxContainer/Scale/VBoxContainer" index="0"]
margin_right = 183.0

[node name="HSlider" parent="HBoxContainer/Scale/VBoxContainer/HBoxContainer" index="0"]
margin_right = 105.0
min_value = 0.1
max_value = 50.0
step = 0.1

[node name="SpinBox" parent="HBoxContainer/Scale/VBoxContainer/HBoxContainer" index="1"]
margin_left = 109.0
margin_right = 183.0
min_value = 0.1
max_value = 50.0
step = 0.1
value = 0.6

[node name="Label" parent="HBoxContainer/Scale/VBoxContainer" index="1"]
margin_left = 75.0
margin_right = 108.0
hint_tooltip = "Maxmium speed of boids (pixels / second)"
text = "Scale"

[node name="Count" parent="HBoxContainer" instance=ExtResource( 1 )]
margin_left = 1717.0
margin_right = 1920.0
margin_bottom = 62.0
rect_scale = Vector2( 1, 1 )
parameter = "count"
group = "level"
initial_value = 250.0
value_scalar = 1.0

[node name="VBoxContainer" parent="HBoxContainer/Count" index="0"]
margin_right = 193.0

[node name="HBoxContainer" parent="HBoxContainer/Count/VBoxContainer" index="0"]
margin_right = 183.0

[node name="HSlider" parent="HBoxContainer/Count/VBoxContainer/HBoxContainer" index="0"]
margin_right = 105.0
max_value = 2000.0
value = 200.0

[node name="SpinBox" parent="HBoxContainer/Count/VBoxContainer/HBoxContainer" index="1"]
margin_left = 109.0
margin_right = 183.0
max_value = 2000.0
value = 200.0

[node name="Label" parent="HBoxContainer/Count/VBoxContainer" index="1"]
margin_left = 73.0
margin_right = 110.0
text = "Count"

[node name="Help" type="PopupDialog" parent="."]
visible = true
margin_right = 526.0
margin_bottom = 709.0
input_pass_on_modal_close_click = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Help"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 50
custom_constants/margin_top = 20
custom_constants/margin_left = 50
custom_constants/margin_bottom = 50
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Help/MarginContainer"]
margin_left = 50.0
margin_top = 20.0
margin_right = 476.0
margin_bottom = 929.0
custom_constants/separation = 10

[node name="Title" type="Label" parent="Help/MarginContainer/VBoxContainer"]
margin_right = 426.0
margin_bottom = 49.0
size_flags_horizontal = 7
custom_fonts/font = ExtResource( 4 )
text = "Bird Brained"
align = 1
valign = 1

[node name="By" type="RichTextLabel" parent="Help/MarginContainer/VBoxContainer"]
margin_top = 59.0
margin_right = 426.0
margin_bottom = 79.0
size_flags_horizontal = 7
size_flags_vertical = 9
custom_fonts/normal_font = ExtResource( 5 )
bbcode_enabled = true
bbcode_text = "[center]by [url=http://ryankelln.com]Ryan Kelln[/url][/center]"
text = "by Ryan Kelln"
fit_content_height = true
scroll_active = false

[node name="MarginContainer" type="MarginContainer" parent="Help/MarginContainer/VBoxContainer"]
margin_top = 89.0
margin_right = 426.0
margin_bottom = 589.0
custom_constants/margin_right = 20
custom_constants/margin_top = 40
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Keys" type="RichTextLabel" parent="Help/MarginContainer/VBoxContainer/MarginContainer"]
margin_left = 20.0
margin_top = 40.0
margin_right = 406.0
margin_bottom = 480.0
size_flags_horizontal = 5
custom_fonts/bold_font = ExtResource( 3 )
custom_fonts/normal_font = ExtResource( 5 )
bbcode_enabled = true
bbcode_text = "[b]Esc[/b]: Display this help
[b]Space[/b]: Pause

[b]Left click[/b]: Place target flag, hold shift to place more than one. Hold down to follow mouse.
[b]Right click[/b]: Remove all flags.

[b]F[/b]: Toggle mouse follow
[b]G[/b]: Toggle GUI
[b]B[/b]: Toggle background
[b]P[/b]: Toggle paint mode
[b]T[/b]: Toggle trails
[b]A[/b]: Zoom in
[b]Z[/b]: Zoom out
[b]>[/b]: Add boid
[b]<[/b]: Remove boid
[b]K[/b]: Separate flock
[b]L[/b]: Slower boid speed
[b];[/b]: Faster boid speed
[b]1-7[/b]: 'Play' color notes

[b]D[/b]: Toggle Debug info"
text = "Esc: Display this help
Space: Pause

Left click: Place target flag, hold shift to place more than one. Hold down to follow mouse.
Right click: Remove all flags.

F: Toggle mouse follow
G: Toggle GUI
B: Toggle background
P: Toggle paint mode
T: Toggle trails
A: Zoom in
Z: Zoom out
>: Add boid
<: Remove boid
K: Separate flock
L: Slower boid speed
;: Faster boid speed
1-7: 'Play' color notes

D: Toggle Debug info"
fit_content_height = true

[node name="Quit" type="Button" parent="Help/MarginContainer/VBoxContainer"]
margin_left = 153.0
margin_top = 599.0
margin_right = 273.0
margin_bottom = 649.0
rect_min_size = Vector2( 120, 50 )
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 3 )
text = "Quit"

[connection signal="pressed" from="Help/MarginContainer/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]

[editable path="HBoxContainer/Cohesion"]
[editable path="HBoxContainer/Alignment"]
[editable path="HBoxContainer/Separation"]
[editable path="HBoxContainer/Target"]
[editable path="HBoxContainer/SightRange"]
[editable path="HBoxContainer/AvoidRange"]
[editable path="HBoxContainer/Speed"]
[editable path="HBoxContainer/Scale"]
[editable path="HBoxContainer/Count"]
